--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             color: white;
             position: sticky;
             top: 0;
+            cursor: pointer;
         }
         tr:nth-child(even) {
             background-color: #f9f9f9;
@@ -83,7 +84,7 @@
             border: 1px solid #ddd;
             border-radius: 3px;
         }
-        .xp-per-kama, .quantity-1-80 {
+        .xp-per-kama, .quantity-1-80, .quantity-1-100 {
             font-weight: bold;
             color: #27ae60;
         }
@@ -99,13 +100,12 @@
 <body>
     <div class="container">
         <h1>🎮 Calculateur XP Ressources Dofus</h1>
-
         <div class="info">
             <strong>Instructions :</strong>
             <ul>
                 <li>Remplissez la colonne "Prix" avec les prix actuels des ressources</li>
-                <li>Les colonnes "XP par Kama" et "Quantité pour 1-80" se calculent automatiquement</li>
-                <li>Le calcul pour 1-80 utilise la valeur 80678 XP comme demandé</li>
+                <li>Les colonnes "XP par Kama", "Quantité pour 1-80" et "Quantité pour 1-100" se calculent automatiquement</li>
+                <li>Le calcul pour 1-80 utilise la valeur 80678 XP et pour 1-100 utilise 196159 XP</li>
                 <li>Vous pouvez télécharger le tableau en CSV ou Excel</li>
                 <li>Les prix sont synchronisés en temps réel entre tous les utilisateurs</li>
             </ul>
@@ -123,7 +123,8 @@
                         <th>Quantité d'expérience</th>
                         <th>Prix (Kamas)</th>
                         <th>XP par Kama</th>
-                        <th>Quantité pour 1-80</th>
+                        <th id="qtyHeader80">Quantité pour 1-80</th>
+                        <th id="qtyHeader100">Quantité pour 1-100</th>
                     </tr>
                 </thead>
                 <tbody id="tableBody">
@@ -143,13 +144,11 @@
             measurementId: "G-BS8GJQ0MR6",
             databaseURL: "https://dofus-calculator-default-rtdb.europe-west1.firebasedatabase.app/"
         };
-
         // Initialize Firebase
         const app = firebase.initializeApp(firebaseConfig);
         const database = firebase.database();
-
         // Données extraites du fichier CSV
-        const resourcesData = [
+         const resourcesData = [
             ["Galet brasillant", 1250, "", "", ""],
             ["Galet acajou", 1250, "", "", ""],
             ["Rune Ga Pa", 500, "", "", ""],
@@ -893,11 +892,9 @@
             ["Pépite", 1.25, "", "", ""],
             ["Rose des sables", 1.25, "", "", ""]
         ];
-
         // Créer le tableau
         function createTable() {
             const tableBody = document.getElementById('tableBody');
-
             resourcesData.forEach((row, index) => {
                 const tr = document.createElement('tr');
                 tr.innerHTML = `
@@ -905,41 +902,39 @@
                     <td>${row[1]}</td>
                     <td><input type="number" class="price-input" onchange="calculateRow(${index})" placeholder="Prix..." step="0.01"></td>
                     <td class="xp-per-kama" id="xp-${index}">-</td>
-                    <td class="quantity-1-80" id="qty-${index}">-</td>
+                    <td class="quantity-1-80" id="qty80-${index}">-</td>
+                    <td class="quantity-1-100" id="qty100-${index}">-</td>
                 `;
                 tableBody.appendChild(tr);
             });
         }
-
         // Calculer une ligne
         function calculateRow(index) {
             const priceInput = document.querySelector(`#tableBody tr:nth-child(${index + 1}) .price-input`);
             const xpCell = document.getElementById(`xp-${index}`);
-            const qtyCell = document.getElementById(`qty-${index}`);
-
+            const qty80Cell = document.getElementById(`qty80-${index}`);
+            const qty100Cell = document.getElementById(`qty100-${index}`);
             const price = parseFloat(priceInput.value);
             const xp = resourcesData[index][1];
-
             if (price && price > 0) {
                 const xpPerKama = xp / price;
-                const quantityFor180 = 80678 / xp;
-
+                const quantityFor80 = 80678 / xp;
+                const quantityFor100 = 196159 / xp;
                 xpCell.textContent = xpPerKama.toFixed(4);
-                qtyCell.textContent = Math.ceil(quantityFor180).toLocaleString();
-
+                qty80Cell.textContent = Math.ceil(quantityFor80).toLocaleString();
+                qty100Cell.textContent = Math.ceil(quantityFor100).toLocaleString();
                 // Sauvegarder dans Firebase
                 const priceRef = firebase.database().ref('prices/' + index);
                 priceRef.set(price);
             } else {
                 xpCell.textContent = '-';
-                qtyCell.textContent = '-';
-
+                qty80Cell.textContent = '-';
+                qty100Cell.textContent = '-';
                 // Supprimer de Firebase
                 const priceRef = firebase.database().ref('prices/' + index);
                 priceRef.remove();
             }
         }
-
         // Écouter les changements de prix en temps réel
         function listenToChanges() {
             const pricesRef = firebase.database().ref('prices');
@@ -949,60 +944,55 @@
                     Object.keys(prices).forEach(index => {
                         const priceInput = document.querySelector(`#tableBody tr:nth-child(${parseInt(index) + 1}) .price-input`);
                         const xpCell = document.getElementById(`xp-${index}`);
-                        const qtyCell = document.getElementById(`qty-${index}`);
-
+                        const qty80Cell = document.getElementById(`qty80-${index}`);
+                        const qty100Cell = document.getElementById(`qty100-${index}`);
                         if (priceInput && priceInput.value != prices[index]) {
                             priceInput.value = prices[index];
-
                             const price = parseFloat(prices[index]);
                             const xp = resourcesData[index][1];
                             const xpPerKama = xp / price;
-                            const quantityFor180 = 80678 / xp;
-
+                            const quantityFor80 = 80678 / xp;
+                            const quantityFor100 = 196159 / xp;
                             xpCell.textContent = xpPerKama.toFixed(4);
-                            qtyCell.textContent = Math.ceil(quantityFor180).toLocaleString();
+                            qty80Cell.textContent = Math.ceil(quantityFor80).toLocaleString();
+                            qty100Cell.textContent = Math.ceil(quantityFor100).toLocaleString();
                         }
                     });
                 }
             });
         }
-
         // Effacer tous les prix
         function clearPrices() {
             if (confirm('Êtes-vous sûr de vouloir effacer tous les prix ?')) {
                 // Effacer dans Firebase
                 const pricesRef = firebase.database().ref('prices');
                 pricesRef.remove();
-
                 const inputs = document.querySelectorAll('.price-input');
                 inputs.forEach(input => {
                     input.value = '';
                 });
-
                 // Effacer les calculs
                 resourcesData.forEach((_, index) => {
                     document.getElementById(`xp-${index}`).textContent = '-';
-                    document.getElementById(`qty-${index}`).textContent = '-';
+                    document.getElementById(`qty80-${index}`).textContent = '-';
+                    document.getElementById(`qty100-${index}`).textContent = '-';
                 });
             }
         }
-
         // Télécharger en CSV
         function downloadCSV() {
-            let csvContent = "Nom de la ressource,Quantité d'expérience,Prix,XP par Kama,Quantité pour 1-80\n";
-
+            let csvContent = "Nom de la ressource,Quantité d'expérience,Prix,XP par Kama,Quantité pour 1-80,Quantité pour 1-100\n";
             resourcesData.forEach((row, index) => {
                 const priceInput = document.querySelector(`#tableBody tr:nth-child(${index + 1}) .price-input`);
                 const xpCell = document.getElementById(`xp-${index}`);
-                const qtyCell = document.getElementById(`qty-${index}`);
-
+                const qty80Cell = document.getElementById(`qty80-${index}`);
+                const qty100Cell = document.getElementById(`qty100-${index}`);
                 const price = priceInput.value || '';
                 const xpPerKama = xpCell.textContent === '-' ? '' : xpCell.textContent;
-                const quantity = qtyCell.textContent === '-' ? '' : qtyCell.textContent.replace(/,/g, '');
-
-                csvContent += `"${row[0]}",${row[1]},${price},${xpPerKama},${quantity}\n`;
+                const quantity80 = qty80Cell.textContent === '-' ? '' : qty80Cell.textContent.replace(/,/g, '');
+                const quantity100 = qty100Cell.textContent === '-' ? '' : qty100Cell.textContent.replace(/,/g, '');
+                csvContent += `"${row[0]}",${row[1]},${price},${xpPerKama},${quantity80},${quantity100}\n`;
             });
-
             const blob = new Blob([csvContent], { type: 'text/csv;charset=utf-8;' });
             const link = document.createElement('a');
             const url = URL.createObjectURL(blob);
@@ -1013,35 +1003,53 @@
             link.click();
             document.body.removeChild(link);
         }
-
         // Télécharger en Excel
         function downloadExcel() {
             const data = [
-                ["Nom de la ressource", "Quantité d'expérience", "Prix", "XP par Kama", "Quantité pour 1-80"]
+                ["Nom de la ressource", "Quantité d'expérience", "Prix", "XP par Kama", "Quantité pour 1-80", "Quantité pour 1-100"]
             ];
-
             resourcesData.forEach((row, index) => {
                 const priceInput = document.querySelector(`#tableBody tr:nth-child(${index + 1}) .price-input`);
                 const xpCell = document.getElementById(`xp-${index}`);
-                const qtyCell = document.getElementById(`qty-${index}`);
-
+                const qty80Cell = document.getElementById(`qty80-${index}`);
+                const qty100Cell = document.getElementById(`qty100-${index}`);
                 const price = priceInput.value ? parseFloat(priceInput.value) : '';
                 const xpPerKama = xpCell.textContent === '-' ? '' : parseFloat(xpCell.textContent);
-                const quantity = qtyCell.textContent === '-' ? '' : parseInt(qtyCell.textContent.replace(/,/g, ''));
-
-                data.push([row[0], row[1], price, xpPerKama, quantity]);
+                const quantity80 = qty80Cell.textContent === '-' ? '' : parseInt(qty80Cell.textContent.replace(/,/g, ''));
+                const quantity100 = qty100Cell.textContent === '-' ? '' : parseInt(qty100Cell.textContent.replace(/,/g, ''));
+                data.push([row[0], row[1], price, xpPerKama, quantity80, quantity100]);
             });
-
             const ws = XLSX.utils.aoa_to_sheet(data);
             const wb = XLSX.utils.book_new();
             XLSX.utils.book_append_sheet(wb, ws, "Ressources Dofus XP");
             XLSX.writeFile(wb, "ressources_dofus_xp.xlsx");
         }
+        // Trier le tableau par la colonne "Quantité pour 1-80"
+        function sortTable(columnIndex) {
+            const table = document.getElementById('resourcesTable');
+            const tbody = document.getElementById('tableBody');
+            const rows = Array.from(tbody.querySelectorAll('tr'));
 
+            rows.sort((a, b) => {
+                const aQty = parseInt(a.querySelectorAll('td')[columnIndex].textContent.replace(/,/g, '')) || Infinity;
+                const bQty = parseInt(b.querySelectorAll('td')[columnIndex].textContent.replace(/,/g, '')) || Infinity;
+                return aQty - bQty;
+            });
+
+            // Supprimer les anciennes lignes
+            while (tbody.firstChild) {
+                tbody.removeChild(tbody.firstChild);
+            }
+
+            // Ajouter les lignes triées
+            rows.forEach(row => tbody.appendChild(row));
+        }
         // Initialiser l'application
         window.onload = function() {
             createTable();
             listenToChanges();
+            document.getElementById('qtyHeader80').addEventListener('click', () => sortTable(4));
+            document.getElementById('qtyHeader100').addEventListener('click', () => sortTable(5));
         };
     </script>
 </body>
